# langstream

./: .gitignore  CLAUDE.md  FIRST_LAUNCH.md  INTERVIEW_DOC.md  PROJECT_DOCUMENTATION.md  Package.resolved  Package.swift  README.md  README.zh.md
.claude/: settings.json
Sources/flowtype/: CapsuleView.swift  FloatingPanel.swift  WindowManager.swift
Sources/flowtype/App/: FlowTypeApp.swift  StatusBarController.swift
Sources/flowtype/Core/: AppState.swift  AsyncRefiner.swift  Configuration.swift  ConfigurationStore.swift  DailyStats.swift  DictationHistory.swift  Dictionary.swift  EnvMigration.swift  Persistence.swift  PipelineOrchestrator.swift  StylePack.swift
Sources/flowtype/Resources/: AppIcon.icns
Sources/flowtype/Services/: AudioDevice.swift  AudioRecorder.swift  AudioSlicer.swift  KeyboardInjector.swift  LLMService.swift  ParallelTranscriber.swift  StreamingSegmentFormer.swift  WhisperServerManager.swift  WhisperSetupChecker.swift
Sources/flowtype/Settings/: HistoryPage.swift  MainWindowView.swift  OnboardingView.swift  OnboardingWindowController.swift  OverviewPage.swift  SettingsView.swift  (+3 more)
Tests/FlowTypeTests/: ASRPostProcessorTests.swift  ConfigurationTests.swift  InlineSanityTests.swift  SessionStateTests.swift
autoresearch/improve-260531-0111/: context.md  improvement-prd.md
autoresearch/security-260531-0047/: diff-scope.txt  fix-plan.md  security-audit-report.md
docs/: 2026-05-25-flowtype-feature-roadmap-prd.md
scripts/: build-app.sh  build-dmg.sh  setup_whisper.sh
services/whisper_server/: main.py  pyproject.toml  requirements.txt
(+45 files in other folders)
