[project]
name = "flowtype-whisper-server"
version = "0.1.0"
description = "Local MLX Whisper ASR server for Flowtype"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.17",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
